fix: z-index, #5

--- a/src/styles/components/Modal.scss
+++ b/src/styles/components/Modal.scss
@@ -3,7 +3,7 @@
 .modal {
   display: block;
   position: fixed;
-  z-index: 20;
+  z-index: 3;
   left: 0;
   top: 0;
   width: 100%;
