--- a/src/styles/components/NavigationBar.scss
+++ b/src/styles/components/NavigationBar.scss
@@ -8,7 +8,7 @@
   padding: 10px 20px;
   position: sticky;
   top: 0;
-  z-index: 10;
+  z-index: 2;
 
   .brand {
     color: base.$brand-color;
